fixed z-index

--- a/static/base/base.css
+++ b/static/base/base.css
@@ -28,7 +28,7 @@
 
 #topbar {
     position: fixed;
-    z-index: 1;
+    z-index: 100;
     background: #000000;
     font-family: "Raleway";
     height: 4em;
